--- a/pj_wei_chuan/views/logistic_company.xml
+++ b/pj_wei_chuan/views/logistic_company.xml
@@ -29,7 +29,7 @@
     </record>
 
     <record id="action_logistic_company" model="ir.actions.act_window">
-        <field name="name">Logistic Company</field>
+        <field name="name">物流公司</field>
         <field name="res_model">logistic.company</field>
         <field name="view_type">form</field>
         <field name="view_mode">tree,form</field>
